k8/coordinates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: illegal-dump-coordinates-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: illegal-dump-coordinates-mock
  template:
    metadata:
      labels:
        app: illegal-dump-coordinates-mock
    spec:
      containers:
      - name: mock
        image: 0i99/illegal-dump-api-gateway-mock
        ports:
        - containerPort: 1080

---

apiVersion: v1
kind: Service
metadata:
  name: illegal-dump-coordinates-mock
spec:
  ports:
  - port: 1080
    targetPort: 1080
    protocol: TCP
    name: http
  selector:
    app: illegal-dump-coordinates-mock


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: illegal-dump-coordinates-mock2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: illegal-dump-coordinates-mock2
  template:
    metadata:
      labels:
        app: illegal-dump-coordinates-mock2
    spec:
      containers:
      - name: mock
        image: 0i99/illegal-dump-api-gateway-mock
        ports:
        - containerPort: 1080
---

apiVersion: v1
kind: Service
metadata:
  name: illegal-dump-coordinates-mock2
spec:
  ports:
  - port: 1080
    targetPort: 1080
    protocol: TCP
    name: http
  selector:
    app: illegal-dump-coordinates-mock2

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: illegal-dump-coordinates-mock
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  # see /etc/hosts
  - "minikube.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/coordinates
    backendRefs:
    - name: illegal-dump-coordinates-mock
      port: 1080
      weight: 80
    - name: illegal-dump-coordinates-mock2
      port: 1080
      weight: 20
